--- a/_sass/vars.scss
+++ b/_sass/vars.scss
@@ -2,13 +2,13 @@
  * Customization Variables
  */
 
-$accent: #FF0F00;
+$accent: #427a55;
 $image-size: 85px;
 
 /*
  * Build Variables, don't touch
  */
 
-$max-width: 700px;
+$max-width: 890px;
 $med-width: 600px;
 $small-width: 480px;
