--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
         {% assign url = site.url | append: site.baseurl | append: page.url %}
     {% endif %}
     <meta name="description" content="{{ desc }}">
-    <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
+    <!--     <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'> -->
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }} RSS" href="/feed.xml" />
     <link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/css/main.css">
     {% if site.favicon %}
@@ -93,4 +93,9 @@
           ga('send', 'pageview');
         </script>
     {% endif %}
+    <footer>
+      <div class="container">
+        <p class="center-text"> Powered by <a href="https://jekyllrb.com">jekyll</a> using the <a href="http://jekyllthemes.org/themes/researcher">Researcher</a> theme.</p>
+      </div>
+    </footer>
 </body>
